--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -1,5 +1,8 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+
+@import
+	url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap')
+	;
 
 body {
 	font-family: 'Open Sans', sans-serif;
@@ -41,14 +44,14 @@ h1 {
 	padding: 5px;
 	margin-bottom: 10px;
 	border: 1px solid #66bbff;
-	border-radius: 5px; 
+	border-radius: 5px;
 }
 
-.Caixa2 {	
+.Caixa2 {
 	padding: 5px;
 	margin-bottom: 10px;
 	border: 1px solid #66bbff;
-	border-radius: 5px; 
+	border-radius: 5px;
 }
 
 #caixa3 {
